--- a/index.html
+++ b/index.html
@@ -16,5 +16,18 @@
                 </ul>
             </div>
         </div>
+
+        <div class="hero-container">
+            <div class="hero-content">
+                <div class="hero-text-main">This website is awesome</div>
+                <div class="hero-text-sub">This website has some subtext that goes here under the main title. It's smaller font and the color is lower contrast</div>
+                <div class="hero-button">
+                    <button>Sign up</button>
+                </div>
+            </div>
+            <div class="hero-image">
+                <img src="#" alt="this is a placeholder for an image">
+            </div>
+        </div>
     </body>
 </html>
