feat: add info section index.html

--- a/index.html
+++ b/index.html
@@ -29,5 +29,27 @@
                 <img src="#" alt="this is a placeholder for an image">
             </div>
         </div>
+
+        <div class="info-container">
+            <div class="info-header">Some random information.</div>
+            <div class="info-cards-container">
+                <div class="info-card">
+                    <img src="#" alt="Informative illustration">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info-card">
+                    <img src="#" alt="Informative illustration">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info-card">
+                    <img src="#" alt="Informative illustration">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+                <div class="info-card">
+                    <img src="#" alt="Informative illustration">
+                    <p>this is some subtext under an illustration or image</p>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
