feat: add cta section index.html

--- a/index.html
+++ b/index.html
@@ -56,5 +56,17 @@
             <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice.</div>
             <div class="quote-author">-Thor, God of Thunder</div>
         </div>
+
+        <div class="cta-container">
+            <div class="cta-modal">
+                <div class="cta-modal-content">
+                    <div class="cta-modal-header">Call to action! It's time!</div>
+                    <div class="cta-modal-text">Sign up for our produxt by clicking that button right over there!</div>
+                </div>
+                <div class="cta-modal-button">
+                    <button>Sign up</button>
+                </div>
+            </div>
+        </div>
     </body>
 </html>
