--- a/index.html
+++ b/index.html
@@ -68,5 +68,7 @@
                 </div>
             </div>
         </div>
+
+        <div class="footer">Copyright © The Odin Project 2021</div>
     </body>
 </html>
