--- a/index.html
+++ b/index.html
@@ -28,9 +28,7 @@
                     <button>Sign up</button>
                 </div>
             </div>
-            <div class="hero-image">
-                <img src="#" alt="this is a placeholder for an image">
-            </div>
+            <div class="hero-image">this is a placeholder for an image</div>
         </div>
 
         <div class="info-container">
