--- a/index.html
+++ b/index.html
@@ -35,19 +35,19 @@
             <div class="info-header">Some random information.</div>
             <div class="info-cards-container">
                 <div class="info-card">
-                    <img src="#" alt="Informative illustration">
+                    <div class="info-card-img"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="info-card">
-                    <img src="#" alt="Informative illustration">
+                    <div class="info-card-img"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="info-card">
-                    <img src="#" alt="Informative illustration">
+                    <div class="info-card-img"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
                 <div class="info-card">
-                    <img src="#" alt="Informative illustration">
+                    <div class="info-card-img"></div>
                     <p>this is some subtext under an illustration or image</p>
                 </div>
             </div>
