--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         </div>
 
         <div class="quote-container">
-            <div class="quote-text">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice.</div>
+            <div class="quote-text"><p><em>This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All I know is that is looks nice.</em></p></div>
             <div class="quote-author">-Thor, God of Thunder</div>
         </div>
 
